reducing the number of methods of cellgrid